--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
         "websocket",
         "ws"
     ],
+    "engines": {
+        "node": ">=20"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/andrewdku/guilds"
