--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/andrewdku/guilds"
+        "url": "https://github.com/andrewdku/guilds.js"
     },
     "publishConfig": {
         "access": "public"
