--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,11 +11,16 @@ jobs:
         steps:
             - name: Checkout repo
               uses: actions/checkout@v4
-
-            - name: Setup Node.js
+              
+            - name: Setup Node.js & pnpm
               uses: actions/setup-node@v4
               with:
-                  node-version: 22
+                node-version: 22
+                cache: 'pnpm'
+                check-latest: true
+
+            - name: Install PNPM
+              run: npm install -g pnpm
 
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
