--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,17 +16,12 @@ jobs:
               uses: actions/setup-node@v4
               with:
                 node-version: 22
-                cache: 'pnpm'
-                check-latest: true
-
-            - name: Install PNPM
-              run: npm install -g pnpm
 
             - name: Install dependencies
-              run: pnpm install --frozen-lockfile
+              run: npm install
 
             - name: Build documentation
-              run: pnpm docs:build
+              run: npm run docs:build
 
             - name: Deploy to GitHub Pages
               uses: peaceiris/actions-gh-pages@v4
