feat: turn into monorepo & init docs

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+**/*.astro*
 **/*.DS_Store*
 **/*.env*
-!**/*env.example*
-**/*.log*
 **/*.pem*
+**/*.turbo*
 **/*test*
+.env
+.env.development.local
+.env.local
+.env.production.local
+.env.test.local
+!**/*env.example*
+.pnp
+.pnp.js
+build
 dist
+docs/src/content/docs/api
 node_modules
+npm-debug.log*
+out
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
