--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,16 @@
-**/*.DS_Store*
 **/*test*
+**/*.DS_Store*
+**/*.env*
+**/*.pem*
+.pnp
+.pnp.js
+.turbo
+build
 dist
 node_modules
-package-lock.json
+npm-debug.log*
+out
+pnpm-debug.log*
 pnpm-lock.yaml
+yarn-debug.log*
+yarn-error.log*
