--- a/package.json
+++ b/package.json
@@ -1,61 +1,21 @@
 {
-    "name": "guilds.js",
-    "description": "Interact with Discord's API with ease",
-    "version": "0.0.4",
-    "license": "Apache-2.0",
+    "name": "@guilds/repo",
+    "version": "0.0.0",
+    "private": true,
+    "workspaces": [
+        "packages/*",
+        "docs/"
+    ],
     "scripts": {
-        "build": "tsdown",
-        "format": "prettier --write . --config package.json --ignore-path .prettierignore",
-        "lint": "tsc --noEmit; prettier --check . --config package.json --ignore-path .prettierignore",
-        "prepublish": "tsdown"
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "format": "prettier --write . --config package.json",
+        "lint": "tsc --noEmit; prettier . --check --config package.json --ignore-path=.prettierignore"
     },
-    "exports": {
-        "default": "./dist/index.cjs",
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.cjs",
-        "types": "./dist/index.d.cts"
-    },
-    "main": "./dist/index.mjs",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.mts",
-    "type": "module",
     "devDependencies": {
-        "@types/node": "^25.3.0",
         "prettier": "^3.8.1",
-        "tsdown": "^0.20.3",
-        "typescript": "^5.9.3"
-    },
-    "files": [
-        "dist",
-        "LICENSE",
-        "package.json",
-        "README.md"
-    ],
-    "keywords": [
-        "api",
-        "discord",
-        "discord-bot",
-        "javascript",
-        "library",
-        "module",
-        "node",
-        "node-js",
-        "npm",
-        "pnpm",
-        "tsdown",
-        "typescript",
-        "websocket",
-        "ws"
-    ],
-    "engines": {
-        "node": ">=20"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/andrewdku/guilds.js"
-    },
-    "publishConfig": {
-        "access": "public"
+        "turbo": "^2.8.10",
+        "typescript": "5.9.2"
     },
     "prettier": {
         "arrowParens": "always",
@@ -67,5 +27,9 @@
         "tabWidth": 4,
         "trailingComma": "es5",
         "useTabs": false
+    },
+    "packageManager": "pnpm@10.29.1",
+    "engines": {
+        "node": ">=20"
     }
 }
