--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "devDependencies": {
         "prettier": "^3.8.1",
         "turbo": "^2.8.10",
-        "typescript": "5.9.2"
+        "typescript": "^5.9.3"
     },
     "prettier": {
         "arrowParens": "always",
