--- a/package.json
+++ b/package.json
@@ -26,17 +26,7 @@
         "singleQuote": false,
         "tabWidth": 4,
         "trailingComma": "es5",
-        "useTabs": false,
-        "overrides": [
-            {
-                "files": "*.mdx",
-                "options": {
-                    "printWidth": 999,
-                    "proseWrap": "preserve",
-                    "embeddedLanguageFormatting": "off"
-                }
-            }
-        ]
+        "useTabs": false
     },
     "packageManager": "pnpm@10.30.2",
     "engines": {
