refactor: use discord-api-types lib

--- a/packages/guilds.js/package.json
+++ b/packages/guilds.js/package.json
@@ -56,5 +56,8 @@
     },
     "publishConfig": {
         "access": "public"
+    },
+    "dependencies": {
+        "discord-api-types": "^0.38.40"
     }
 }
