ci: generate dev build

--- a/packages/guilds.js/package.json
+++ b/packages/guilds.js/package.json
@@ -55,6 +55,7 @@
         "type": "git",
         "url": "https://github.com/andrewdku/guilds.js"
     },
+    "private": false,
     "publishConfig": {
         "access": "public"
     },
