--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -47,7 +47,7 @@ jobs:
               working-directory: packages/guilds.js
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-              run: pnpm publish --tag dev --access public
+              run: pnpm publish --tag dev --access public --no-git-checks
 
             - name: Deprecate previous development version
               working-directory: packages/guilds.js
