--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
+    "include": ["src"],
+    "exclude": ["dist", "node_modules", "test", "**/*.DS_Store*"],
     "compilerOptions": {
         "allowJs": true,
         "declaration": false,
@@ -9,6 +11,7 @@
         "moduleResolution": "bundler",
         "noEmit": true,
         "noUncheckedIndexedAccess": true,
+        "paths": { "@/*": ["./src/*"] },
         "removeComments": false,
         "resolveJsonModule": true,
         "skipLibCheck": true,
