--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "version": "0.0.0",
     "private": true,
     "workspaces": [
-        "packages/*",
-        "docs/"
+        "docs/",
+        "package/"
     ],
     "scripts": {
         "build": "turbo run build",
         "dev": "turbo run dev",
         "format": "prettier --write . --config package.json",
-        "lint": "tsc -p ./packages/guilds.js --noEmit; prettier . --check --config package.json --ignore-path=.prettierignore"
+        "lint": "tsc -p ./package --noEmit; prettier . --check --config package.json --ignore-path=.prettierignore"
     },
     "devDependencies": {
         "prettier": "^3.8.1",
@@ -28,7 +28,7 @@
         "trailingComma": "es5",
         "useTabs": false
     },
-    "packageManager": "pnpm@10.30.2",
+    "packageManager": "pnpm@10.30.3",
     "engines": {
         "node": ">=20"
     }
