--- a/package/package.json
+++ b/package/package.json
@@ -2,7 +2,7 @@
     "name": "guilds.js",
     "description": "Node.js library for using the Discord API",
     "version": "0.1.0",
-    "license": "Apache-2.0",
+    "license": "MIT",
     "scripts": {
         "build": "tsdown",
         "format": "prettier --write . --config package.json --ignore-path .prettierignore",
