--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -12,7 +12,7 @@ jobs:
             - name: Setup pnpm
               uses: pnpm/action-setup@v4
               with:
-                  version: "10.15.0"
+                  version: "10"
 
             - name: Checkout Repository
               uses: actions/checkout@v4
@@ -24,7 +24,7 @@ jobs:
                   registry-url: https://registry.npmjs.org/
 
             - name: Install dependencies
-              run: pnpm install --frozen-lockfile --shamefully-hoist
+              run: pnpm install --frozen-lockfile
 
             - name: Generate development version
               id: version
