--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Generate development version
               id: version
               run: |
-                  DEV_VERSION=$(node -p "require('./package/package.json').version + '-dev.' + new Date().toISOString().replace(/[-T:]/g,'').slice(0,12)")
+                  DEV_VERSION="0.0.0-dev.$(date -u +%Y%m%d%H%M)"
                   echo "DEV_VERSION=$DEV_VERSION" >> $GITHUB_ENV
                   echo "DEV_VERSION=$DEV_VERSION" >> $GITHUB_OUTPUT
                   node -e "
